recent-topics: Add recent-topics to sidebar.

--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -25,6 +25,17 @@
                     </span>
                 </a>
             </li>
+            <li data-name="recent" class="global-filter">
+                <a href="#narrow/is/recent">
+                    <span class="filter-icon">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                    </span>
+                    <span class="hover-underline">{{ _('Recently engaged') }}</span>
+                    <span class="count">
+                        <span class="value"></span>
+                    </span>
+                </a>
+            </li>
             <li data-name="starred" class="global-filter">
                 <a href="#narrow/is/starred">
                     <span class="filter-icon">
