--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -28,9 +28,9 @@
             <li data-name="recent" class="global-filter">
                 <a href="#narrow/is/recent">
                     <span class="filter-icon">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <i class="fa fa-clock-o" aria-hidden="true"></i>
                     </span>
-                    <span class="hover-underline">{{ _('Recently engaged') }}</span>
+                    <span class="hover-underline">{{ _('Recently engaged with') }}</span>
                     <span class="count">
                         <span class="value"></span>
                     </span>
