gear menu: Add "Contact support" to gear menu.
Fixes: #10033

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -3023,3 +3023,8 @@ div.message_content button.tictactoe-square:disabled {
 .flatpickr-months .numInputWrapper span {
     display: none;
 }
+
+.contact_support-active {
+    color: #2d7c6f !important;
+    background-image: linear-gradient(to bottom, #fff, #fff) !important;
+}
