--- a/templates/zerver/app/navbar.html
+++ b/templates/zerver/app/navbar.html
@@ -128,6 +128,11 @@
                                     <i class="fa fa-search" aria-hidden="true"></i> {{ _('Search operators') }}
                                 </a>
                             </li>
+                            <li role="presentation">
+                                <a tabindex="0" role="menuitem" id="contact_support">
+                                    <i class="fa fa-address-book" aria-hidden="true"></i> {{ _('Contact support') }}
+                                </a>
+                            </li>
                             <li class="divider" role="presentation"></li>
                             <li role="presentation">
                                 <a href="{{ apps_page_url }}" target="_blank" role="menuitem">
