typeahead: Rename `codepoint` to `emoji_code`.

--- a/static/templates/typeahead_list_item.handlebars
+++ b/static/templates/typeahead_list_item.handlebars
@@ -2,7 +2,7 @@
     {{#if has_image}}
     <img class="emoji" src="{{ img_src }}" />
     {{else}}
-    <span class='emoji emoji-{{ codepoint }}' />
+    <span class='emoji emoji-{{ emoji_code }}' />
     {{/if}}
     &nbsp;&nbsp;
 {{else}}
