message view: Add guest avatar markers to message sender avatars.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -1545,6 +1545,10 @@ blockquote p {
     vertical-align: top;
     border-radius: 4px;
     overflow: hidden;
+
+    &.guest-avatar::after {
+        outline: 2px solid hsl(0, 0%, 100%);
+    }
 }
 
 .home-error-bar {
