emoji_picker: Optimize the search.
This commit introduces a small optimization by eliminating the need
to generate different objects every time a search is initiated.

--- a/static/templates/emoji_showcase.handlebars
+++ b/static/templates/emoji_showcase.handlebars
@@ -5,6 +5,6 @@
     {{else}}
     <div class="emoji emoji-preview emoji-{{emoji_code}}"></div>
     {{/if}}
-    <div class="emoji-canonical-name" title="{{name}}">{{name}}</div>
+    <div class="emoji-canonical-name" title="{{display_name}}">{{display_name}}</div>
 </div>
 {{/with}}
