--- a/static/styles/landing-page.scss
+++ b/static/styles/landing-page.scss
@@ -1797,6 +1797,38 @@ nav ul li.active::after {
     background-color: transparent;
 }
 
+.portico-landing.hello .testimonials .company-box .company.wildfly {
+    background-image: url(/static/images/landing-page/logos/wildfly.png);
+    background-color: transparent;
+}
+
+.portico-landing.hello .testimonials .company-box .company.hail {
+    background-image: url(/static/images/landing-page/logos/hail.png);
+    background-color: transparent;
+}
+
+.portico-landing.hello .testimonials .company-box .company.openshot {
+    background-image: url(/static/images/landing-page/logos/openshot.png);
+    background-color: transparent;
+    height: 52px;
+}
+
+.portico-landing.hello .testimonials .company-box .company.wikimedia-outreach {
+    background-image: url(/static/images/landing-page/logos/wikimedia-outreach.png);
+    background-color: transparent;
+}
+
+.portico-landing.hello .testimonials .company-box .company.fhir {
+    background-image: url(/static/images/landing-page/logos/fhir.png);
+    background-color: transparent;
+}
+
+.portico-landing.hello .testimonials .company-box .company.mixxx {
+    background-image: url(/static/images/landing-page/logos/mixxx.png);
+    background-color: transparent;
+    height: 45px;
+}
+
 .portico-landing.hello .apps {
     position: relative;
     padding: 200px 80px 100px 80px;
