--- a/templates/zerver/emails/confirm_new_email.source.html
+++ b/templates/zerver/emails/confirm_new_email.source.html
@@ -5,14 +5,17 @@
 {% endblock %}
 
 {% block content %}
-<p>{{ _('Hi!') }}
+<p>
+    {% trans %}
+    Hi {{ user_name }},
+    {% endtrans %}
 </p>
 
 <p>
     {% trans %}
     We received a request to change the email address for the Zulip account on
-    {{ realm_uri }} from {{ old_email }} to {{ new_email }}. If you would like
-    to confirm this change, please click below:
+    {{ realm_uri }} from {{ old_email }} to {{ new_email }}.
+    To confirm this change, please click below:
     {% endtrans %}
     <a class="button" href="{{ activate_url }}">{{_('Confirm email change') }}</a>
 </p>
@@ -22,10 +25,5 @@
     If you did not request this change, please contact us immediately at
     <a href="mailto:{{ support_email }}">{{ support_email }}</a>.
     {% endtrans %}
-</p>
-
-<p>
-    {{ _("Cheers,") }}<br />
-    {{ _("Team Zulip") }}
 </p>
 {% endblock %}
