invites: Use stream_id instead of stream names in invitation.
This replaces the current usage of stream names with stream ids.

This commit also removes the `traditional` attribute from the invite
form as now we are sending stream_ids as an argument; this was the
only place in the codebase we used traditional=true, and it's great to
have it removed.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -2526,7 +2526,8 @@ div.topic_edit_spinner .loading_indicator_spinner {
     display: none;
 }
 
-#invite-user #invite-user-label {
+#invite-user-label,
+#invite-method-choice {
     font-size: 1em;
     font-weight: 700;
     text-align: center;
