--- a/static/templates/invite_subscription.handlebars
+++ b/static/templates/invite_subscription.handlebars
@@ -7,7 +7,7 @@
     {{#each streams}}
 
     <label class="checkbox display-block">
-        <input type="checkbox" name="stream" value="{{name}}"
+        <input type="checkbox" name="stream" value="{{stream_id}}"
           {{#if default_stream}}checked="checked"{{/if}} />
         <span></span>
         {{#if invite_only}}<i class="fa fa-lock" aria-hidden="true"></i>{{/if}}
