unread: Rename zero-subject-unreads to zero-topic-unreads.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -375,8 +375,8 @@ li.expanded_private_message a {
     align-items: center;
 }
 
-.zero-subject-unreads .pm-box,
-.zero-subject-unreads .topic-box {
+.zero-topic-unreads .pm-box,
+.zero-topic-unreads .topic-box {
     margin-right: 15px;
 }
 
