webhooks/jira: Update logo and screenshots.

--- a/templates/zerver/hello.html
+++ b/templates/zerver/hello.html
@@ -420,7 +420,7 @@
             </a>
             <a href="/integrations/doc/jira">
                 <div class="group">
-                    <img class="integration-logo" src="/static/images/integrations/logos/jira.svg" alt="{{ _('JIRA logo') }}">
+                    <img class="integration-logo" src="/static/images/integrations/logos/jira.png" alt="{{ _('JIRA logo') }}">
                     <h3 class="integration-name">JIRA</h3>
                     <p class="integration-description">Monitor project bugs and issues</p>
                 </div>
