Added link back to chats

--- a/templates/zerver/digest_base.html
+++ b/templates/zerver/digest_base.html
@@ -3,7 +3,8 @@
 <body style="background-color:hsl(165, 25%, 97%);">
     <div class="container" >
         <div class="alert" style="text-align: center;">
-                Catch up on the all the conversations and updates since you last visited us
+                Catch up on all the conversations and updates since you last visited us.
+                Click <a href={{ realm_uri }}>here</a> to skip these and go directly to your chats.
         </div>        
 
         <div class="container email-html" style="padding-top:100px;">
