--- a/templates/zerver/digest_base.html
+++ b/templates/zerver/digest_base.html
@@ -1,15 +1,26 @@
 {% extends "zerver/base.html" %}
 {% block content %}
-<body style="background-color:hsl(165, 25%, 97%);">
-    <div class="container" >
-        <div class="alert" style="text-align: center;">
-                Catch up on all the conversations and updates since you last visited us.
-                Click <a href={{ realm_uri }}>here</a> to skip these and go directly to your chats.
+<body style="background-color:hsl(165, 25%, 97%);"> 
+    <div class="header" style="background-color: hsl(0,0%,100%); text-align: center; position: fixed; width:100%; margin-bottom: 20px">
+        <div class="alert" style="margin-left: 40px; margin-right: 45px">
+                    Catch up on all the conversations and updates since you last visited us.
+                    Click <a href={{ realm_uri }}>here</a> to skip these and go directly to your chats.
         </div>        
-
-        <div class="container email-html" style="padding-top:100px;">
+        <h3 style="margin-top:10px; margin-bottom: 5px">
+            <a class="brand logo" href="{{ realm_uri }}/">
+                {% if custom_logo_url %}
+                <img draggable="false" src="{{ custom_logo_url }}" style="height:1.5em;" alt class="nav-logo no-drag"/>
+                {% else %}
+                <img id="realm-logo" src="/static/images/zulip-logo.svg?version=0" style="height:1.5em;" alt class="nav-logo no-drag"/>
+                {% endif %}
+            </a>
+            ZULIP missed messages
+        </h3>
+    </div>
+    <div class="container" style="padding-top:150px; ">
+        <div class="email-html" style="padding:20px; background-color: hsl(0,0%,100%); border-radius:5px; display: block; margin: 0 auto !important; max-width:750px">
             {% include "zerver/emails/compiled/digest.html" %}
         </div>    
     </div>
-</body>
+</body> 
 {% endblock %}
