--- a/templates/zerver/accounts_accept_terms.html
+++ b/templates/zerver/accounts_accept_terms.html
@@ -17,7 +17,7 @@ the registration flow has its own (nearly identical) copy of the fields below in
         </div>
         {% endif %}
 
-        <div class="form-horizontal white-box inline-block">
+        <div class="form-horizontal white-box">
             <form method="post" class="form-horizontal" id="registration" action="{{ url('zerver.views.home.accounts_accept_terms') }}">
                 {{ csrf_input }}
                 <div class="control-group">
