invite: Replace `invite_as_admin` usage with `invite_as`.
Since we have already added the `invite_as` field to models, we can now
replace usage of `invite_as_admin` properly with its equivalent `invite_as
== PreregistrationUser.INVITE_AS['REALM_ADMIN']`.

Hence, also removed now redundant `invite_as`.

--- a/templates/zerver/app/invite_user.html
+++ b/templates/zerver/app/invite_user.html
@@ -19,8 +19,8 @@
                     <label class="control-label" for="invite_as">{{ _('User(s) join as') }}</label>
                     <div class="controls">
                         <select id="invite_as">
-                            <option name="invite_as" value="normal">{{ _('Members') }}</option>
-                            <option name="invite_as" value="admin">{{ _('Organization administrators') }}</option>
+                            <option name="invite_as" value="{{ invite_as.MEMBER }}">{{ _('Members') }}</option>
+                            <option name="invite_as" value="{{ invite_as.REALM_ADMIN }}">{{ _('Organization administrators') }}</option>
                         </select>
                     </div>
                 </div>
