invite: Add option to invite user as guest.
This completes our basic guest user feature.

Fixes: #10818.

--- a/templates/zerver/app/invite_user.html
+++ b/templates/zerver/app/invite_user.html
@@ -21,6 +21,7 @@
                         <select id="invite_as">
                             <option name="invite_as" value="{{ invite_as.MEMBER }}">{{ _('Members') }}</option>
                             <option name="invite_as" value="{{ invite_as.REALM_ADMIN }}">{{ _('Organization administrators') }}</option>
+                            <option name="invite_as" value="{{ invite_as.GUEST_USER }}">{{ _('Guest users') }}</option>
                         </select>
                     </div>
                 </div>
