--- a/static/templates/settings/custom-user-profile-field.handlebars
+++ b/static/templates/settings/custom-user-profile-field.handlebars
@@ -1,7 +1,7 @@
 <div class="user-name-section custom_user_field" name="{{ field.name }}" data-field-id="{{ field.id }}">
     <label for="{{ field.name }}" class="title">{{ field.name }}</label>
     {{#if is_long_text_field}}
-    <textarea maxlength="500" class="custom_user_field_value">{{ field_value }}</textarea>
+    <textarea maxlength="500" class="custom_user_field_value">{{ field_value.value }}</textarea>
     {{else if is_choice_field}}
     <select class="custom_user_field_value">
         <option value=""></option>
@@ -15,10 +15,10 @@
     </div>
     {{else if is_date_field }}
     <input class="custom_user_field_value datepicker" data-field-id="{{ field.id }}" type="text"
-      value="{{ field_value }}" />
+      value="{{ field_value.value }}" />
     <span class="remove_date"><i class="fa fa-close"></i></span>
     {{else}}
-    <input class="custom_user_field_value" type="{{ field_type }}" value="{{ field_value }}" maxlength="50" />
+    <input class="custom_user_field_value" type="{{ field_type }}" value="{{ field_value.value }}" maxlength="50" />
     {{/if}}
     <div class="field_hint">{{ field.hint }}</div>
 </div>
