emails: Inline CSS in missed_message.
As part of this change, we port into the .messages class the work in
4e8e7348da840d39ae3da900e17505da35fbbcc5 to change overflow-y to auto,
not scroll (skipping that would result in a regression).

--- a/templates/zerver/emails/digest.source.html
+++ b/templates/zerver/emails/digest.source.html
@@ -39,7 +39,7 @@
         </p>
 
         {% for convo in hot_conversations %}
-        <div id='messages'>
+        <div class='messages'>
             {% for recipient_block in convo.first_few_messages %}
                 <div class='hot_convo_recipient_block'>
                     <div class='hot_convo_recipient_header'>{{ recipient_block.header.html|safe }}</div>
