--- a/templates/zerver/digest_base.html
+++ b/templates/zerver/digest_base.html
@@ -6,28 +6,39 @@
 
 {% block content %}
 <body style="background-color:hsl(165, 25%, 97%);"> 
-    <div class="digest-header" style="background-color: hsl(0,0%,100%); text-align: center; position: fixed; width:100%; margin-bottom: 20px; border: solid 1px; border-top:none; box-shadow: 0px 0px 4px">
-        <div class="alert" style="margin-left: 40px; margin-right: 45px; margin-bottom: 10px">
-                    Catch up on all the conversations and updates since you last visited us.
-                    Click <a href={{ realm_uri }}>here</a> to skip these and go directly to your chats.
+    <div class="modal hide fade" id="digest-alert">
+        <div class="modal-body" style="text-align: center;">
+                Want to catch up on all the conversations and updates<br>
+                since you last visited us?<br> <br>
         </div>
-        <div class="portico-header float-left">  
-            <h3 style="margin-top:0px; margin-bottom: 5px; text-align: left; padding-left: 40px">ZULIP Digest</h3>
+        <div class="modal-footer">
+            <a href="#" class="btn" style="font-size: 1.2em" data-dismiss="modal">Yes</a>
+            <a href={{ realm_uri }} class="btn" style="font-size: 1.2em">No! Skip These</a>
         </div>
-        <div class="portico-header float-right top-links" style="padding-top:5px; padding-right:45px;"> 
-            {% include 'zerver/portico-header-dropdown.html' %}
-        </div>        
     </div>
-    
-    <div class="container" style="padding-top:150px;">
-        <div class="email-container" style="display:block; margin: 0 auto !important; max-width:500px;">
+    <div class="portico-wrap">
+        {% include 'zerver/portico-header.html' %}
+    </div>    
+    <div class="container" style="padding-top:100px;">
+        <div class="email-container" style="display:block; margin: 0 auto !important; max-width:500px; padding-bottom: 30px">
+            <div class="portico-page" style="text-align: center;"> 
+                <h1> Zulip Digest </h1>
+            </div>
             <img id="digest-logo" src="/static/images/emails/digest.png" style="-ms-interpolation-mode:bicubic; border:none;" />
-            <div class="email-html" style="padding:20px; background-color: hsl(0,0%,100%); border-radius:5px; display: block;">
+            <div class="email-html" style="padding:20px; background-color: hsl(0,0%,100%); border-radius:5px;">
                     {% include 'zerver/emails/compiled/digest.html' %}
                     <img id="digest-logo" src="/static/images/emails/footer.png" style="padding-top: 20px; -ms-interpolation-mode:bicubic; border:none;" />
             </div> 
             <div class="apple-link" style="margin-top:10px; color:#999; font-size:12px; text-align:center"> {{physical_address}}</div>           
         </div>           
+        {% include 'zerver/footer.html' %}
     </div>    
 </body> 
+
+<script type="text/javascript">
+    $(window).on('load',function(){
+        $('#digest-alert').modal('show');
+    });
+    $()
+</script>
 {% endblock %}
