settings_invites: Add invited_as column to the table.

--- a/static/templates/admin_invites_list.handlebars
+++ b/static/templates/admin_invites_list.handlebars
@@ -13,6 +13,9 @@
         <span class="invited_at">{{invited}}</span>
     </td>
     <td>
+        <span>{{invited_as_text}}</span>
+    </td>
+    <td>
         <button class="button rounded small revoke btn-danger" data-invite-id="{{id}}">
             {{t "Revoke" }}
         </button>
