--- a/static/templates/settings/invites-list-admin.handlebars
+++ b/static/templates/settings/invites-list-admin.handlebars
@@ -9,7 +9,8 @@
                 <th>{{t "Email" }}</th>
                 <th>{{t "Invited by" }}</th>
                 <th>{{t "Invited at" }}</th>
-                <th class="actions">{{t "Actions" }}</th>
+                <th>{{t "Invited as" }}</th>
+                <th>{{t "Actions" }}</th>
             </thead>
             <tbody id="admin_invites_table" class="required-text thick admin_invites_table" data-empty="{{t 'No invites match your current filter.' }}"></tbody>
         </table>
