--- a/templates/zerver/hello.html
+++ b/templates/zerver/hello.html
@@ -544,6 +544,10 @@
             <button href="" type="button" name="button">{{ _('Sign up now') }}</button>
         </a>
         {% endif %}
+        <div class="atlassian-migration">
+            Migrating from HipChat or Stride?
+            Check out our <a href="/atlassian">Atlassian migration guide</a>.
+        </div>
         <div class="zulip-octopus"></div>
     </div>
 </div>
