portico: Add usage number hint in quotes section of /hello.

--- a/templates/zerver/hello.html
+++ b/templates/zerver/hello.html
@@ -508,7 +508,7 @@
 
             <div class="company-container">
                 <header>
-                    <h2 class="float left">Leading organizations use Zulip:</h2>
+                    <h2 class="float left">Trusted by thousands of teams</h2>
                     <div class="float clear"></div>
                 </header>
                 <div class="company-box">
