emails: Fix wrongly converted hex colors.
It looked like I got some hex values wrong during the
hsl to hex conversions. I used the built in vscode color
converter for this so not really sure how this happened.
The colors are now equalent to the original hex colors
before the conversion to hsl was made in
5869cc3b6d737660c9f45ca195c4793b9ad0ce15

--- a/templates/zerver/emails/email.css
+++ b/templates/zerver/emails/email.css
@@ -243,20 +243,20 @@ a.button:hover {
 }
 
 .recipient_block_with_messages {
-    background-color: #eff3f4;
+    background-color: #f0f4f5;
     border: 1px solid black;
     margin-bottom: 4px;
 }
 
 .recipient_header_with_messages {
-    background-color: #9ec9ff;
+    background-color: #9ecaff;
     border-bottom: 1px solid black;
     font-weight: bold;
     padding: 2px;
 }
 
 .message_content_with_messages {
-    background-color: #eff3f4;
+    background-color: #f0f4f5;
     margin-left: 1px;
     margin-right: 2px;
 }
