emails: Fix the if condition logic in missed_message.html.
Refactoring in 4e1c058 was not correct since recipient_block
and message_content checked for if not condition while
recipient_header checked for if.

The naming of classes in 6077a33 was also not correct
semantically.

--- a/templates/zerver/emails/missed_message.source.html
+++ b/templates/zerver/emails/missed_message.source.html
@@ -20,7 +20,7 @@
     {% if show_message_content %}
     <div class='messages'>
         {% for recipient_block in messages %}
-        {% if not recipient_block.header.stream_message %}
+        {% if recipient_block.header.stream_message %}
         <div class='recipient_block_with_messages'>
             <div class='recipient_header_with_messages'>{{ recipient_block.header.html|safe }}</div>
             <div class='message_content_with_messages'>
