emails: Replace check for reply_warning with check for noreply
Check for reply_warning removed. Instead we check that reply_to is of the form 'noreply...@...'
Fixes: #11180

--- a/templates/zerver/emails/missed_message.source.html
+++ b/templates/zerver/emails/missed_message.source.html
@@ -52,7 +52,7 @@
         {% endif %}
     </p>
 
-    {% if reply_warning %}
+    {% if 'noreply' in reply_to %}
     <p>Please do not reply to this automated message. To respond to the missed messages you have received, please log on to Zulip and send your replies there.</p>
     {% endif %}
 
