B4: Align items left column.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -1,8 +1,6 @@
 #left-sidebar {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-
-    font-size: 0.89rem;
 }
 
 #left-sidebar #user-list,
@@ -35,9 +33,9 @@
 
 .hashtag:empty::after {
     content: "#";
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     font-weight: 800;
-    line-height: 0;
+    line-height:1em;
 }
 
 .tooltip {
@@ -51,16 +49,12 @@
     font-weight: normal;
 }
 
-.left-sidebar li {
-    margin: 1px 0px;
-}
-
 .left-sidebar li a:hover {
     text-decoration: none;
 }
 
 #stream_filters li {
-    padding: 1px 0px;
+    padding-left: 5px;
 }
 
 #stream_filters li ul {
@@ -80,7 +74,8 @@
 }
 
 .input-append input[type=text].stream-list-filter {
-    margin-left: 10px;
+    margin-left: 5px;
+    width: 228px;
 }
 
 #global_filters li:hover,
@@ -125,20 +120,16 @@ li.active-sub-filter {
 
 #left-sidebar .filter-icon {
     display: inline-block;
-    width: 18px;
     text-align: center;
-    margin-right: 3px;
+    margin-right: 7px;
 }
 
 #global_filters .global-filter {
     position: relative;
-    padding: 1px 10px;
+    padding: 1px 5px;
 }
 
 .left-sidebar li {
-    padding-top: 2px;
-    padding-bottom: 2px;
-
     border-radius: 4px;
 }
 
@@ -193,7 +184,6 @@ li.active-sub-filter {
 }
 
 .topic-box {
-    padding-left: 5px;
     margin-right: 30px;
 }
 
@@ -279,8 +269,6 @@ ul.filters li.out_of_home_view li.muted_topic {
 
 #stream_filters .subscription_block {
     padding: 0px;
-    margin-right: 25px;
-    margin-left: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -323,7 +311,6 @@ ul.filters li.out_of_home_view li.muted_topic {
 
 .stream-privacy .hashtag {
     position: relative;
-    top: 2px;
     margin-right: 5px;
 }
 
@@ -366,7 +353,6 @@ li.expanded_private_message a {
 .topic-box {
     display: flex;
     justify-content: center;
-    padding-top: 1px;
     cursor: pointer;
 }
 
@@ -411,7 +397,7 @@ li.expanded_private_message a {
 
 #streams_header {
     margin-right: 0px;
-    padding-left: 10px;
+    padding-left: 5px;
     cursor: pointer;
 }
 
@@ -424,7 +410,6 @@ li.expanded_private_message a {
 }
 
 li.show-more-topics a {
-    margin-left: 5px;
     font-size: 80%;
 }
 
