--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -58,10 +58,7 @@
             </div>
             <div id="stream-filters-container" class="scrolling_list">
                 <div class="input-append notdisplayed">
-                    <input class="stream-list-filter" type="text" autocomplete="off" placeholder="{{ _('Search streams') }}" />
-                    <button type="button" class="btn clear_search_button" id="clear_search_stream_button">
-                        <i class="fa fa-remove" aria-hidden="true"></i>
-                    </button>
+                    <input class="stream-list-filter form-control" type="search" autocomplete="off" placeholder="{{ _('Search streams') }}" />
                 </div>
                 <ul id="stream_filters" class="filters"></ul>
             </div>
