--- a/templates/zerver/app/navbar.html
+++ b/templates/zerver/app/navbar.html
@@ -79,131 +79,58 @@
                 </a>
             </div>
             <div id="navbar-buttons" {%if embedded %} style="visibility: hidden"{% endif %}>
-                <ul class="nav" role="navigation">
-                    <li class="dropdown actual-dropdown-menu" id="gear-menu">
-                        <a id="settings-dropdown" href="#" role="button" class="dropdown-toggle" data-target="nada" data-toggle="dropdown" title="{{ _('Menu') }} (g)">
-                            <i class="fa fa-cog" aria-hidden="true"></i><i class="fa fa-caret-down settings-dropdown-caret" aria-hidden="true"></i>
-                        </a>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="settings-dropdown">
-                            {#
-                            It is quite ingrained in our frontend code that your Home
-                            view is a Bootstrap Nav tab, even though we don't show the tab
-                            anymore
-                            #}
-                            <li class="invisible" style="display:none;" role="presentation"><a href="#home" data-toggle="tab"></a></li>
-                            <li role="presentation">
-                                <a href="#streams/subscribed" role="menuitem">
-                                    <i class="fa fa-exchange" aria-hidden="true"></i> {{ _('Manage streams') }}
-                                </a>
-                            </li>
-                            <li role="presentation">
-                                <a href="#settings" role="menuitem">
-                                    <i class="fa fa-wrench" aria-hidden="true"></i> {{ _('Settings') }}
-                                </a>
-                            </li>
-                            <li class="admin-menu-item" role="presentation">
-                                <a href="#organization" role="menuitem">
-                                    <i class="fa fa-bolt" aria-hidden="true"></i>
-                                    <span>{{ _('Manage organization') }}</span>
-                                </a>
-                            </li>
-                            <li class="divider"></li>
-                            <li role="presentation">
-                                <a href="/help" target="_blank" role="menuitem">
-                                    <i class="fa fa-question-circle" aria-hidden="true"></i> {{ _('Help center') }}
-                                </a>
-                            </li>
-                            <li role="presentation">
-                                <a tabindex="0" role="menuitem" data-overlay-trigger="keyboard-shortcuts">
-                                    <i class="fa fa-keyboard-o" aria-hidden="true"></i> {{ _('Keyboard shortcuts') }} <span class="hotkey-hint">(?)</span>
-                                </a>
-                            </li>
-                            <li role="presentation">
-                                <a tabindex="0" role="menuitem" data-overlay-trigger="message-formatting">
-                                    <i class="fa fa-pencil" aria-hidden="true"></i> {{ _('Message formatting') }}
-                                </a>
-                            </li>
-                            <li role="presentation">
-                                <a tabindex="0" role="menuitem" data-overlay-trigger="search-operators">
-                                    <i class="fa fa-search" aria-hidden="true"></i> {{ _('Search operators') }}
-                                </a>
-                            </li>
-                            <li class="divider" role="presentation"></li>
-                            <li role="presentation">
-                                <a href="{{ apps_page_url }}" target="_blank" role="menuitem">
-                                    <i class="fa fa-desktop" aria-hidden="true"></i> {{ _('Desktop & mobile apps') }}
-                                </a>
-                            </li>
-                            <li role="presentation">
-                                <a href="/integrations" target="_blank" role="menuitem">
-                                    <i class="fa fa-github" aria-hidden="true"></i> {{ _('Integrations') }}
-                                </a>
-                            </li>
-                            <li role="presentation">
-                                <a href="/api" target="_blank" role="menuitem">
-                                    <i class="fa fa-sitemap" aria-hidden="true"></i> {{ _('API documentation') }}
-                                </a>
-                            </li>
-                            {% if not is_guest %}
-                            <li role="presentation">
-                                <a href="/stats" target="_blank" role="menuitem">
-                                    <i class="fa fa-bar-chart" aria-hidden="true"></i>
-                                    <span>{{ _('Statistics') }}</span>
-                                </a>
-                            </li>
-                            {% endif %}
-                            {% if show_plans %}
-                            <li role="presentation">
-                                <a href="/plans" target="_blank" role="menuitem">
-                                    <i class="fa fa-rocket" aria-hidden="true"></i> {{ _('Plans and pricing') }}
-                                </a>
-                            </li>
-                            {% endif %}
-                            {% if show_billing %}
-                            <li role="presentation">
-                                <a href="/billing" target="_blank" role="menuitem">
-                                    <i class="fa fa-credit-card" aria-hidden="true"></i> {{ _('Billing') }}
-                                </a>
-                            </li>
-                            {% endif %}
-                            <li class="divider" role="presentation"></li>
-                            {% if enable_feedback %}
-                            <li role="presentation">
-                                <a href="#feedback" class="feedback" role="menuitem">
-                                    <i class="fa fa-comment" aria-hidden="true"></i> {{ _('Feedback') }}
-                                </a>
-                            </li>
-                            {% endif %}
-                            {% if show_invites %}
-                            <li role="presentation">
-                                <a href="#invite" role="menuitem">
-                                    <i class="fa fa-plus-circle" aria-hidden="true"></i> {{ _('Invite users') }}
-                                </a>
-                            </li>
-                            <li class="divider" role="presentation"></li>
-                            {% endif %}
-                            {% if show_webathena %}
-                            <li title="{% trans %}Grant Zulip the Kerberos tickets needed to run your Zephyr mirror via Webathena{% endtrans %}" id="webathena_login_menu" role="presentation">
-                                <a href="#webathena" class="webathena_login" role="menuitem">
-                                    <i class="fa fa-bolt" aria-hidden="true"></i>{{ _('Link with Webathena') }}
-                                </a>
-                            </li>
-                            {% endif %}
-                            <li role="presentation">
-                                <a href="#logout" class="logout_button" role="menuitem">
-                                    <i class="fa fa-power-off" aria-hidden="true"></i> {{ _('Log out') }}
-                                </a>
-                            </li>
-                            {% if show_debug %}
-                            <li role="presentation">
-                                <a href="#debug" data-toggle="tab" role="menuitem">
-                                    <i class="fa fa-barcode" aria-hidden="true"></i> {{ _('Debug') }}
-                                </a>
-                            </li>
-                            {% endif %}
-                        </ul>
-                    </li>
-                </ul>
+
+              <div class="dropdown" >
+                <a class="btn dropdown-toggle" href="#" role="button" id="settings-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="{{ _('Menu') }} (g)" role="navigation">
+                   <i class="fa fa-cog" aria-hidden="true"></i>
+                </a>
+
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#streams/subscribed" role="menuitem"><i class="fa fa-exchange" aria-hidden="true"></i> {{ _('Manage streams') }}</a>
+                  <a class="dropdown-item" href="#settings" role="menuitem"><i class="fa fa-wrench" aria-hidden="true"></i> {{ _('Settings') }}</a>
+                  <a class="dropdown-item" href="#organization" role="menuitem" class="admin-menu-item"><i class="fa fa-bolt" aria-hidden="true"></i><span>{{ _('Manage organization') }}</span></a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="/help" target="_blank" role="menuitem"><i class="fa fa-question-circle" aria-hidden="true"></i> {{ _('Help center') }}</a>
+                  <a class="dropdown-item" role="menuitem" data-overlay-trigger="keyboard-shortcuts"><i class="fa fa-keyboard-o" aria-hidden="true"></i> {{ _('Keyboard shortcuts') }} <span class="hotkey-hint">(?)</span></a>
+                  <a class="dropdown-item" role="menuitem" role="menuitem" data-overlay-trigger="message-formatting"><i class="fa fa-pencil" aria-hidden="true" ></i> {{ _('Message formatting') }} </a>
+                  <a class="dropdown-item" role="menuitem" role="menuitem" data-overlay-trigger="search-operators" ><i class="fa fa-search" aria-hidden="true"></i> {{ _('Search operators') }} </a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" role="menuitem" role="menuitem" href="{{ apps_page_url }}" target="_blank" ><i class="fa fa-desktop" aria-hidden="true"></i> {{ _('Desktop & mobile apps') }} </a>
+                  <a class="dropdown-item" role="menuitem" role="menuitem" href="/integrations" target="_blank" ><i class="fa fa-github" aria-hidden="true"></i> {{ _('Integrations') }} </a>
+                  <a class="dropdown-item" role="menuitem" role="menuitem" href="" > </a>
+                  <a class="dropdown-item" role="menuitem" href="/api" target="_blank"><i class="fa fa-sitemap" aria-hidden="true" ></i> {{ _('API documentation') }} </a>
+                  {% if not is_guest %}
+                  <a class="dropdown-item" role="menuitem" href="/stats" ><i class="fa fa-bar-chart" aria-hidden="true"></i>{{ _('Statistics') }}</a>
+                  {% endif %}
+                  {% if show_plans %}
+                  <a class="dropdown-item" role="menuitem" href="/plans" ><i class="fa fa-rocket" aria-hidden="true"></i> {{ _('Plans and pricing') }} </a>
+                  {% endif %}
+                  {% if show_billing %}
+                  <a class="dropdown-item" role="menuitem" href="/billing" ><i class="fa fa-credit-card" aria-hidden="true"></i> {{ _('Billing') }} </a>
+                  {% endif %}
+                  <div class="dropdown-divider"></div>
+                  {% if enable_feedback %}
+                  <a class="dropdown-item" role="menuitem" href="#feedback" class="feedback" ><i class="fa fa-comment" aria-hidden="true"></i> {{ _('Feedback') }} </a>
+                  {% endif %}
+                  {% if show_invites %}
+                  <a class="dropdown-item" role="menuitem" href="#invite" ><i class="fa fa-plus-circle" aria-hidden="true"></i> {{ _('Invite users') }} </a>
+                  <div class="dropdown-divider"></div>
+                  {% endif %}
+                  {% if show_webathena %}
+                  <a class="dropdown-item" role="menuitem" href="#webathena" ><i class="fa fa-bolt" aria-hidden="true"></i>{{ _('Link with Webathena') }}</a>
+                  {% endif %}
+
+                  <a class="dropdown-item" role="menuitem" href="#logout" ><i class="fa fa-power-off" aria-hidden="true"></i> {{ _('Log out') }} </a>
+
+                  {% if show_debug %}
+                  <a class="dropdown-item" role="menuitem" href="#debug" ><i class="fa fa-barcode" aria-hidden="true"></i> {{ _('Debug') }} </a>
+                  {% endif %}
+
+
+                </div>
+              </div>
+
+
             </div>
         </div>
     </nav>
