--- a/static/templates/message_edit_history.handlebars
+++ b/static/templates/message_edit_history.handlebars
@@ -7,7 +7,7 @@
     <div class="messagebox-border">
         <div class="messagebox-content">
             <div class="message_top_line"><span class="message_time">{{ timestamp }}</span></div>
-            <div class="message_edit_content">{{{ body_to_render }}}</div>
+            <div class="message_content message_edit_history_content">{{{ body_to_render }}}</div>
             <div class="message_author"><div class="author_details">{{ posted_or_edited }} {{ edited_by }}</div></div>
         </div>
     </div>
